# ssl_cert_generator

./: README.md  pyproject.toml
scripts/: check_keys.sh
src/: compare_keys.py  generate_csr.py  utils.py
tests/: test_compare_keys.py  test_generate_csr.py  test_utils.py
